--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,18 @@
   font-size: large;
 }
 
+.progress {
+  border-radius: 0 !important;
+}
+
+.input {
+  text-align: center;
+}
+
+form {
+  margin: 20px 0;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
